objects/Doctor__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>availableDate__c</fullName>
        <label>availableDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>department</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMail__c</fullName>
        <label>eMail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>homeConsult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>homeConsult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>houseNumber__c</fullName>
        <label>houseNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isAvailable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isAvailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>licenseNumber__c</fullName>
        <label>licenseNumber</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>partTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>position__c</fullName>
        <label>position</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privatePhone__c</fullName>
        <label>privatePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetNumber__c</fullName>
        <label>streetNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>surname__c</fullName>
        <label>surname</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>town__c</fullName>
        <label>town</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>workPhone__c</fullName>
        <label>workPhone</label>
        <type>Phone</type>
    </fields>
    <label>Doctor</label>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>